<resources>
    <string name="app_name">Vinilos</string>
    <string name="title_albums">Álbumes</string>
    <string name="title_artists">Artistas</string>
    <string name="title_collections">Coleccionistas</string>
    <string name="title_welcome">Bienvenido</string>
    <string name="button_collectors">COLECCIONISTA</string>
    <string name="button_visitors">VISITANTE</string>
    <string name="album_searchbar_hint">¿Qué quieres escuchar?</string>
    <string name="album_label">Álbum</string>
    <string name="album_genre_label">Género</string>
    <string name="album_releasedate_label">Fecha de estreno</string>
    <string name="album_record_label">Disquera</string>
    <string name="album_artists_label">Artistas invitados</string>
    <string name="no_tracks_message">No hay canciones para mostrar.</string>
    <string name="no_comments_message">No hay comentarios para mostrar.</string>
    <string name="no_albums_message">No hay álbumes para mostrar.</string>
    <string name="add_album_title">Agregar álbum</string>
    <string name="name_hint">Nombre</string>
    <string name="url_cover_hint">URL Portada</string>
    <string name="release_date_hint">Fecha de estreno (dd/mm/aaaa)</string>
    <string name="description_hint">Descripción</string>
    <string name="add_button_text">Agregar</string>
    <string name="back">Regresar</string>
    <string name="no_bands_message">No hay bandas para mostrar.</string>
    <string name="no_musicians_message">No hay Músicos para mostrar.</string>
    <string name="image_artist">Imagen del artista.</string>
    <string name="image_heart">Imagen corazón.</string>
    <string name="no_collectors_message">No hay coleccionistas para mostrar.</string>
    <string name="collector_searchbar_hint">¿A quién quieres buscar?</string>
    <string name="tabInformation">Información</string>
    <string name="tabSongs">Canciones</string>
    <string name="tabComments">Comentarios</string>
    <string name="welcomeText">Bienvenido</string>
    <string name="ivExit">Salir al menú principal</string>
    <string name="ivProfile">Avatar</string>
    <string name="ivArrowLeft">Devolverse</string>
    <string name="ivAccount">Cuenta</string>
    <string name="ivMainBackground">Artista cantando</string>
    <string name="ivGradient">Gradiente</string>
    <string name="ivAlbumItem">Imágen de álbum</string>
    <string name="ivHeart">Corazón</string>
    <string name="fabAddAlbum">Agregar álbum</string>
    <string name="fabAddTrack">Agregar canción</string>
    <string name="ivTrackItem">Imágen de canción</string>
    <string name="tvAlbumInfoArtist">  •  %s</string>
    <string name="tvNumberFormat">%d</string>
    <string name="selectGenreText">Seleccione un género</string>
    <string name="selectDisqueraText">Seleccione una disquera</string>
    <string name="tabFavoritePerformers">Artistas Favoritos</string>
    <string name="tabAlbums">Álbumes</string>
    <string name="no_favorite_performers_message">No hay artistas favoritos para mostrar.</string>
    <string name="ivFavoritePerformerItem">Imágen de artista favorito</string>
    <string name="ivCheckIcon">Imagen de un check</string>
    <string name="agregar_cancion">Agregar Canción</string>
    <string name="track_name">Nombre del track</string>
    <string name="track_duration">Duración (mm:ss)</string>
    <string name="track_invalid_format_msg">Formato inválido. Debe ser mm:ss</string>
    <string name="add_track">Agregar Track</string>
</resources>