<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_albums"
        android:icon="@drawable/ic_music_note"
        android:iconTint="@color/gray"
        android:title="@string/title_albums" />

    <item
        android:id="@+id/navigation_artists"
        android:icon="@drawable/ic_people"
        android:iconTint="@color/gray"
        android:title="@string/title_artists" />

    <item
        android:id="@+id/navigation_collections"
        android:icon="@drawable/ic_star"
        android:iconTintMode="@color/white"
        android:title="@string/title_collections" />

</menu>